--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:src="@drawable/Instagram_login"
+        android:src="@drawable/InstagramLogin"
         android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="175dp" />
@@ -73,5 +73,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/Instagram_login" />
+        android:src="@drawable/InstagramLogin" />
 </LinearLayout>
